--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,5 @@ edition = "2018"
 serde = { version = "1.0.118", features = ["derive", "rc"] }
 anyhow = "1.0.38"
 futures = "0.3.9"
+async-channel = "1.5.1"
+log = "0.4.13"
