--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,9 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-serde = { version = "1.0.119", features = ["derive", "rc"] }
-anyhow = "1.0.38"
-futures = "0.3.12"
-async-channel = "1.5.1"
-log = "0.4.13"
+serde = { version = "1.0.125", features = ["derive", "rc"] }
+anyhow = "1.0.40"
+futures = { version = "0.3.14", features = ["executor"] }
+async-channel = "1.6.1"
+log = "0.4.14"
 toml = "0.5.8"
